--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icons/arrow_text.svg
+    - assets/icons/question.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
